test: implement complete test suite using clean mocks for middlewares and controllers
